# sqlximia_pJ

./: employees.db  main.py  pyproject.toml
app/: __init__.py
app/models/: associates.py  base.py  employee.py  position.py
app/routes/: employee.py  position.py
app/static/: style.css
app/templates/: _base.html
app/templates/employee/: info.html  management.html
app/templates/position/: info.html  management.html
