[tool.poetry]
name = "sqlximia-pj"
version = "0.1.0"
description = ""
authors = ["mitsy01 <alexanderfigmochka19@gmail.com>"]
license = "MID"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
